feat: add username in signin
