# app/api/signin.py
@@ -17,9 +17,11 @@ def signin():
             user = None
             return jsonify({"msg":"wrong account"}),400
         if user is not None and user.verify_password(password):
+            username = user.name
             token = user.generate_confirmation_token()
             return jsonify({
                 "token":token,
+                "username":username,
             }),200
         else:
             return jsonify({
